--- a/services/netbox/frey-netbox-values.yaml
+++ b/services/netbox/frey-netbox-values.yaml
@@ -1044,6 +1044,13 @@ postgresql:
   auth:
     username: netbox
     database: netbox
+  
+  ### Manual update by RM to fix issue with bitnami moving postgresql, valkey, and worker to new repository.  Thanks Broadcom...
+  ### Credit to remram44 for this fix
+  ### https://github.com/netbox-community/netbox-chart/issues/805#issuecomment-3303665863
+  image:
+    repository: bitnamilegacy/postgresql
+    tag: 17.6.0-debian-12-r4
 
 ## External database configuration
 ## @param externalDatabase.host Host of the existing database
@@ -1109,6 +1116,13 @@ valkey:
   auth:
     # Sentinel auth is disabled by default, as Netbox does not support configuring SENTINEL_KWARGS.
     sentinel: false
+
+  ### Manual update by RM to fix issue with bitnami moving postgresql, valkey, and worker to new repository.  Thanks Broadcom...
+  ### Credit to remram44 for this fix
+  ### https://github.com/netbox-community/netbox-chart/issues/805#issuecomment-3303665863
+  image:
+    repository: bitnamilegacy/valkey
+    tag: 8.1.3-debian-12-r3
 
 tasksDatabase:
   database: 0
@@ -1712,8 +1726,17 @@ worker:
     ##
     image:
       registry: docker.io
-      repository: bitnami/kubectl
-      tag: 1.33.4-debian-12-r0
+
+      ### Manual update by RM to fix issue with bitnami moving postgresql, valkey, and worker to new repository.  Thanks Broadcom...
+      ### Credit to remram44 for this fix
+      ### https://github.com/netbox-community/netbox-chart/issues/805#issuecomment-3303665863
+
+      #repository: bitnami/kubectl
+      #tag: 1.33.4-debian-12-r0
+
+      repository: bitnamilegacy/kubectl
+      tag: 1.33.4
+
       digest: ""
       ## Specify a imagePullPolicy
       ## ref: https://kubernetes.io/docs/concepts/containers/images/#pre-pulled-images
