major updates to bootstrap and teardown bash scripts.  removed hard coded tokens, prompt user to define those, remove hard coded IP address in external-secrets SecretStore

--- a/services/external-secrets/frey-external_secrets_vault_ExternalSecret_frey-admin.yaml
+++ b/services/external-secrets/frey-external_secrets_vault_ExternalSecret_frey-admin.yaml
@@ -1,22 +1,22 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: vault-external-secret
+  name: vault-external-frey-services-netbox-admin-secret
 spec:
   refreshInterval: "15s"
   secretStoreRef:
     name: vault-backend
     kind: SecretStore
   target:
-    name: vault-frey-admin
+    name: vault-frey-services-netbox-admin
   data:
   - secretKey: username
     remoteRef:
-      key: frey/test
+      key: frey/services/netbox/admin
       property: username
   - secretKey: password
     remoteRef:
-      key: frey/test
+      key: frey/services/netbox/admin
       property: password
 
 
