--- a/services/external-secrets/frey-external_secrets_vault_SecretStore.yaml
+++ b/services/external-secrets/frey-external_secrets_vault_SecretStore.yaml
@@ -1,12 +1,11 @@
 ### THIS IS NOT PRODUCTION GRADE, DO NOT USE IN PRODUCTION ###
-### THIS CONTAINS HARD CODED ROOT TOKENS.  DO.  NOT.  USE.  IN.  PROD.  ###
 
 apiVersion: v1
 kind: Secret
 metadata:
   name: vault-token
 data:
-  token: cm9vdFRva2Vu 
+  token: ${VAULT_TOKEN_BASE64}
 ---
 apiVersion: external-secrets.io/v1
 kind: SecretStore
@@ -15,7 +14,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: "http://172.17.1.134:8200"
+      server: "http://${LOCAL_IP_ADDRESS}:8200"
       path: "secret"
       # Version is the Vault KV secret engine version.
       # This can be either "v1" or "v2", defaults to "v2"
