external-secrets feeding admin credentials for netbox and seeding secrets for awx

--- a/services/external-secrets/frey-external_secrets_vault_ExternalSecret_frey-netbox-admin.yaml
+++ b/services/external-secrets/frey-external_secrets_vault_ExternalSecret_frey-netbox-admin.yaml
@@ -2,11 +2,12 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: vault-external-frey-services-netbox-admin-secret
+  namespace: netbox
 spec:
   refreshInterval: "15s"
   secretStoreRef:
     name: vault-backend
-    kind: SecretStore
+    kind: ClusterSecretStore
   target:
     name: vault-frey-services-netbox-admin
   data:
@@ -18,10 +19,11 @@ spec:
     remoteRef:
       key: frey/services/netbox/admin
       property: password
-
-
-  # metadataPolicy to fetch all the labels in JSON format
- # - secretKey: tags
- #   remoteRef:
- #     metadataPolicy: Fetch
- #     key: frey_admin
+  - secretKey: email
+    remoteRef:
+      key: frey/services/netbox/admin
+      property: email
+  - secretKey: api_token
+    remoteRef:
+      key: frey/services/netbox/admin
+      property: api_token
