--- a/services/external-secrets/frey-external_secrets_vault_ClusterSecretStore.yaml
+++ b/services/external-secrets/frey-external_secrets_vault_ClusterSecretStore.yaml
@@ -7,8 +7,24 @@ metadata:
 data:
   token: ${VAULT_TOKEN_BASE64}
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-token
+  namespace: netbox
+data:
+  token: ${VAULT_TOKEN_BASE64}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: vault-token
+  namespace: awx-operator
+data:
+  token: ${VAULT_TOKEN_BASE64}
+---
 apiVersion: external-secrets.io/v1
-kind: SecretStore
+kind: ClusterSecretStore
 metadata:
   name: vault-backend
 spec:
