--- a/services/awx/frey-awx-values.yaml
+++ b/services/awx/frey-awx-values.yaml
@@ -7,6 +7,8 @@ AWX:
     ingress_type: ingress
     hostname: awx.local
     service_type: ClusterIP
+    admin_password_secret: vault-frey-services-awx-admin
+    
 
   # configurations for external postgres instance
   postgres:
