Added netlab-clab topologies for testing purposes, as well as some helper scripts to both seed NetBox from clab YAML files as well as purge the NetBox database to start fresh for easy iteration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 .deployment_state.json
 .deployment_state.json.backup
 .env
-services/netlab/netlab-venv/
+services/netlab/netlab-venv/*
+!services/netlab/netlab-venv/test-topology/
+services/netlab/netlab-venv/test-topology/*
+!services/netlab/netlab-venv/test-topology/topology.yml
+!services/netlab/netlab-venv/test-topology/clab.yml
+!services/netlab/netlab-venv/vxlan-ospf-evpn/
+services/netlab/netlab-venv/vxlan-ospf-evpn/*
+!services/netlab/netlab-venv/vxlan-ospf-evpn/topology.yml
+!services/netlab/netlab-venv/vxlan-ospf-evpn/clab.yml
+scripts/netbox-helpers/*
+!scripts/netbox-helpers/requirements.txt
+!scripts/netbox-helpers/seed-netbox-from-clab.py
+!scripts/netbox-helpers/bootstrap.sh
