Commit to save current working state on AWX integration with Netbox.

--- a/services/netbox/frey-netbox-values.yaml
+++ b/services/netbox/frey-netbox-values.yaml
@@ -968,7 +968,7 @@ ingress:
   ##
   annotations: {}
   hosts:
-    - host: netbox.local  ## Edited by RM from default
+    - host: ${NETBOX_URL}
       paths:
         # You can manually specify the service name and service port if
         # required. This could be useful if for exemple you are using the AWS
