--- a/execution-environment/requirements.txt
+++ b/execution-environment/requirements.txt
@@ -2,24 +2,24 @@
 # Python packages required for NetBox and other integrations
 
 # NetBox API client - required for netbox.netbox collection
-pynetbox>=7.4.0
+pynetbox
 
 # Network automation libraries
-netaddr>=1.3.0
-jmespath>=1.0.1
+netaddr
+jmespath
 
 # Kubernetes Python client
-kubernetes>=30.1.0
-openshift>=0.13.2
+kubernetes
+openshift
 
 # Common utilities
-requests>=2.32.0
-urllib3>=2.2.0
-jinja2>=3.1.4
+requests
+urllib3
+jinja2
 
 # JSON/YAML processing
-pyyaml>=6.0.2
-jsonschema>=4.23.0
+pyyaml
+jsonschema
 
 # Additional helpful libraries
-python-dotenv>=1.0.1
+python-dotenv
