restoring bindep.txt but empty to try and fix failing builds.  nothing can be easy...

--- a/execution-environment/execution-environment.yml
+++ b/execution-environment/execution-environment.yml
@@ -13,6 +13,7 @@ images:
 dependencies:
   galaxy: requirements.yml
   python: requirements.txt
+  system: bindep.txt
   ansible_core:
     package_pip: ansible-core
   ansible_runner:
