--- a/execution-environment/execution-environment.yml
+++ b/execution-environment/execution-environment.yml
@@ -10,6 +10,10 @@ images:
 
 dependencies:
   galaxy: requirements.yml
+  ansible_core:
+    package_pip: ansible-core
+  ansible_runner:
+    package_pip: ansible-runner
 
 additional_build_steps:
   append_final:
