--- a/execution-environment/execution-environment.yml
+++ b/execution-environment/execution-environment.yml
@@ -10,12 +10,7 @@ images:
 
 dependencies:
   galaxy: requirements.yml
-  python: requirements.txt
-  ansible_core:
-    package_pip: ansible-core
-  ansible_runner:
-    package_pip: ansible-runner
 
-additional_build_files:
-  - src: requirements.txt
-    dest: requirements.txt
+additional_build_steps:
+  append_final:
+    - RUN pip3 install --no-cache-dir pynetbox
