--- a/.github/workflows/build-ee.yml
+++ b/.github/workflows/build-ee.yml
@@ -1,15 +1,15 @@
-# .github/workflows/build-ee.yml
-# For use in existing project repo with multiple components
+#Github Actions file to automatically build an Ansible execution environment with NetBox collection and pynetbox package
 
+---
 name: Build Execution Environment
 
 on:
   push:
     branches: [main]
     paths:
-      - 'execution-environment/**'        # Only trigger on EE file changes
-      - '.github/workflows/build-ee.yml'  # Or if workflow changes
-  workflow_dispatch:                      # Allow manual trigger anytime
+      - 'execution-environment/**'
+      - '.github/workflows/build-ee.yml'
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
@@ -23,39 +23,22 @@ jobs:
       packages: write
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      
-      - name: Install ansible-builder
-        run: pip install ansible-builder
-      
-      - name: Login to GitHub Container Registry
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Build execution environment
+      - name: Build and push
         working-directory: execution-environment
         run: |
-          ansible-builder build \
-            --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
-            --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            --container-runtime docker \
-            --verbosity 3
-      
-      - name: Push images
-        run: |
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest .
           docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
       
-      - name: Test execution environment
+      - name: Test
         run: |
           docker run --rm ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
             ansible-galaxy collection list | grep netbox
