--- a/execution-environment/Dockerfile
+++ b/execution-environment/Dockerfile
@@ -1,11 +1,20 @@
 FROM quay.io/ansible/awx-ee:latest
 
-# Install NetBox collection
-RUN ansible-galaxy collection install netbox.netbox
+USER root
+
+# Install NetBox collection to system location
+RUN ansible-galaxy collection install netbox.netbox:3.19.0 \
+    --collections-path /usr/share/ansible/collections
 
 # Install pynetbox Python package
-RUN pip3 install --no-cache-dir pynetbox
+RUN pip3 install --no-cache-dir pynetbox==7.4.0
 
-# Metadata
-LABEL name="frey-awx-netbox-ee"
-LABEL description="AWX EE with NetBox support"
+# Verify installations
+RUN ansible-galaxy collection list | grep netbox
+RUN pip3 list | grep pynetbox
+
+USER 1000
+
+LABEL name="frey-awx-netbox-ee" \
+      description="AWX Execution Environment with NetBox support" \
+      version="1.0.0"
