fixed env variable handling issues in bootstrap shell script and updated playbook filepaths for AWX deploy

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ scripts/netbox-helpers/*
 !scripts/netbox-helpers/requirements.txt
 !scripts/netbox-helpers/seed-netbox-from-clab.py
 !scripts/netbox-helpers/bootstrap.sh
+clab_netbox_sync.log
