more inventory tweaking

--- a/ansible-playbooks/inventory/netbox_inventory.yml
+++ b/ansible-playbooks/inventory/netbox_inventory.yml
@@ -3,7 +3,7 @@ plugin: netbox.netbox.nb_inventory
 #api_endpoint: "{{ lookup('env', 'NETBOX_API') }}"
 #token: "{{ lookup('env', 'NETBOX_TOKEN') }}"
 validate_certs: false
-config_context: true
+config_context: false
 flatten_custom_fields: true
 
 # Group devices by NetBox attributes
