generalizing AWX EE build for broader applicability and ease of use

--- a/services/awx/frey-awx-values.yaml
+++ b/services/awx/frey-awx-values.yaml
@@ -319,9 +319,9 @@ extraDeploy:
                 controller_username: "{{ awx_username }}"
                 controller_password: "{{ awx_password }}"
                 validate_certs: false
-                name: "Frey NetBox EE"
-                image: "ghcr.io/rbmacd/frey-awx-netbox-ee:latest"
-                description: "Custom execution environment with netbox.netbox collection and pynetbox package"
+                name: "Frey AWX EE"
+                image: "ghcr.io/rbmacd/frey-awx-ee:latest"
+                description: "Custom execution environment with multiple NetDevOps collections and python packages"
                 pull: "always"
                 state: present
               register: netbox_ee
@@ -350,7 +350,7 @@ extraDeploy:
                 source_project: "Infrastructure Automation"
                 source_path: "ansible-playbooks/inventory/netbox_inventory.yml"
                 credential: "NetBox Production"
-                execution_environment: "Frey NetBox EE"
+                execution_environment: "Frey AWX EE"
                 overwrite: true
                 overwrite_vars: true
                 update_on_launch: true
@@ -419,6 +419,7 @@ extraDeploy:
                 inventory: "NetBox Dynamic Inventory"
                 project: "Infrastructure Automation"
                 playbook: "ansible-playbooks/playbooks/gather_facts.yml"
+                execution_environment: "Frey AWX EE"
                 credentials:
                   - "Ansible SSH Key"
                 ask_limit_on_launch: true
@@ -439,6 +440,7 @@ extraDeploy:
                 inventory: "NetBox Dynamic Inventory"
                 project: "Infrastructure Automation"
                 playbook: "ansible-playbooks/playbooks/backup_configs.yml"
+                execution_environment: "Frey AWX EE"
                 credentials:
                   - "Network Device Password"
                 ask_limit_on_launch: true
