--- a/.github/workflows/build-ee.yml
+++ b/.github/workflows/build-ee.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}-awx-netbox-ee
+  IMAGE_NAME: ${{ github.repository }}-awx-ee
 
 jobs:
   build:
