disabled gather_facts and added connection: network_cli to generate_configs.yml playbook.  Fixes AWX job run failures since these are network devices, not Linux servers.

--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -1,7 +1,8 @@
 ---
 - name: Generate Configurations from NetBox Data
   hosts: all
-  gather_facts: yes
+  gather_facts: no
+  connection: network_cli
   
   vars:
     config_dir: "{{ playbook_dir }}/../configs/generated"
