--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -60,6 +60,10 @@
           Ensure device has config context defined in NetBox.
         success_msg: "NetBox data validated for {{ inventory_hostname }}"
 
+    - name: DEBUG FOR RM - print contents of config_context data structure
+      ansible.builtin.debug:
+        var: config_context
+
     - name: Validate required NetBox config context fields
       ansible.builtin.assert:
         that:
