--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -64,11 +64,11 @@
       ansible.builtin.debug:
         var: config_context
 
-    - name: DEBUG FOR RM - print contents of config_context data structure
+    - name: DEBUG FOR RM - print contents of config_context data within structure
       ansible.builtin.debug:
-        var: config_context.ntp_servers
-        var: config_context.dns_servers
-        var: config_context.syslog_servers
+        var: config_context.ntp_servers[]
+        var: config_context.dns_servers[]
+        var: config_context.syslog_servers[]
 
     - name: Validate required NetBox config context fields
       ansible.builtin.assert:
