--- a/ansible-playbooks/playbooks/generate_configs.yml
+++ b/ansible-playbooks/playbooks/generate_configs.yml
@@ -66,9 +66,9 @@
 
     - name: DEBUG FOR RM - print contents of config_context data within structure
       ansible.builtin.debug:
-        var: config_context.ntp_servers[]
-        var: config_context.dns_servers[]
-        var: config_context.syslog_servers[]
+        var: config_context.ntp_servers
+        var: config_context.dns_servers
+        var: config_context.syslog_servers
 
     - name: Validate required NetBox config context fields
       ansible.builtin.assert:
